--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img id="texture3" src="/models/lightmap_walls.png">
       </a-assets>
 
-      <a-entity gltf-model="#gallery" material="shader:my-custom; tex:#texture1">></a-entity>
+      <a-entity gltf-model="#gallery" material="shader:flat">></a-entity>
     </a-scene>
   </body>
 </html>
