--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         <img id="texture3" src="/models/lightmap_walls.png">
       </a-assets>
 
-      <a-entity gltf-model="#gallery" material="shader:flat">></a-entity>
+      <a-entity light="type: hemisphere; color: #fff; groundColor: #fff; intensity: 2"></a-entity>
+
+      <a-entity gltf-model="#gallery">></a-entity>
     </a-scene>
   </body>
 </html>
