--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ AFRAME.registerShader('my-custom', {
         <a-asset-item id="gallery_model" src="/models/gallery_model.obj"></a-asset-item>
         <a-asset-item id="gallery_emit" src="/models/gallery_emit.obj"></a-asset-item>
         
-        <audio id="track" src="/sounds/piano.mp3" crossorigin="anonymous"></audio>
+        <audio id="track" src="/sounds/piano_stereo.wav" crossorigin="anonymous"></audio>
 
         <a-asset-item id="gallery" src="/models/gallery.glb"></a-asset-item>
         <img id="texture1" src="/models/lightmap_ceiling.png" crossorigin="anonymous">
