--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@ AFRAME.registerShader('my-custom', {
           position="0 -27 0"
           src="#track"
           loop="true"
-          autoplay=c
+          autoplay="false"
           gain="1"
           directivityPattern="0 1"
           rolloff="logarithmic"
-          
+
           >
         </a-resonance-audio-src>
       </a-resonance-audio-room>
