--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ AFRAME.registerShader('my-custom', {
             try{
               piano.play();
               console.log("Video is playing");
-            }else{
-              console.warn("No user input yet");
+            }catch(err){
+              console.warn(err.message);
             }
           }
         }); 
