--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@ AFRAME.registerShader('my-custom', {
       </a-assets>
       
     
-          <!-- Camera -->
-
-      <!-- hand controls -->
-      <a-entity teleport-controls vive-controls="hand: right"></a-entity>
+      <a-entity id="cameraRig">
+        <!-- camera -->
+        <a-entity id="head" camera wasd-controls look-controls></a-entity>
+        <!-- hand controls -->
+        <a-entity id="left-hand" teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;"></a-entity>
+        <a-entity id="right-hand" teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;"></a-entity>
+      </a-entity>
 
       <a-entity
           geometry="primitive: plane; width: 2; height: 2;" rotation="-90 0 0" position="0 0.1 -3"
