--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="/src/aframe-resonance-audio-component.js"></script>
     <script src="/src/aframe-extras.min.js"></script>
+    <script src="/src/aframe-teleport-controls.js"></script>
     <script src="/src/aframe-teleport-controls.min.js"></script>
 
     <script>
